Fixing some layout issues and widget grid

--- a/htdocs/assets/less/ucp/page.less
+++ b/htdocs/assets/less/ucp/page.less
@@ -348,23 +348,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 .add-dashboard{
 	float: right;
-	margin-top: 12px;
-	margin-right: 5px;
-
-	.btn{
-		padding: 2px 8px;
-		color: @main_color;
-		border-color: @main_color;
-	}
-
-	.btn-default{
-		background-color: @secundary_color;
-	}
-
-	:hover{
-		background-color: @main_color;
-		color: @secundary_color;
-	}
+	margin-top: 9px;
+	margin-right: 6px;
 }
 
 .nav-tabs {
