--- a/htdocs/modules/Widgets/assets/less/bootstrap.less
+++ b/htdocs/modules/Widgets/assets/less/bootstrap.less
@@ -27,11 +27,17 @@
 			.widget-title{
 				position: relative;
 				text-align: center;
-				padding-top: 5px;
-				padding-bottom: 5px;
+				padding-top: 2px;
+				padding-bottom: 2px;
 				text-transform: capitalize;
 				border-top: 3px solid @third_color;
 				border-bottom: 1px solid @main_color;
+				.widget-module-name{
+					font-size: 14px;
+				}
+				.widget-module-subname{
+					font-size: 9px;
+				}
 				.remove-widget{
 					display: none;
 					position: absolute;
